resolved some layout problems between split pane and antd tabs

--- a/src/components/BettingDrawers/MarketDrawer/MarketDrawer.less
+++ b/src/components/BettingDrawers/MarketDrawer/MarketDrawer.less
@@ -6,18 +6,6 @@
 #market-drawer {
   height: 100%;
 
-  div.title {
-    background-color: @market-drawer-title-bg;
-    width: @market-drawer-width;
-    height: @market-drawer-title-height;
-
-    > div.label {
-      padding: 10px;
-      text-transform: uppercase;
-      font-size: 14px;
-    }
-  }
-
   div.ant-tabs {
     height: 100%;
   }
@@ -41,10 +29,17 @@
     }
   }
 
+  div.betslip {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: @market-drawer-title-height;
+  }
+
+  // content is used in both tabs so I didn't put it under div.betslip yet
   div.content {
     position: relative;
     height: 100%;
-    padding-top: 40px;
 
     > div.blank {
       width: 80%;
@@ -65,6 +60,8 @@
   }
 
   div.footer {
+    position: absolute;
+    bottom: @market-drawer-footer-height;
     background-color: @market-drawer-title-bg;
     width: @market-drawer-width;
     padding: 5px;
